--- a/projeto_bd/pom.xml
+++ b/projeto_bd/pom.xml
@@ -30,7 +30,7 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-        
+
     	<!-- JavaFX Controls -->
     	<dependency>
         	<groupId>org.openjfx</groupId>
@@ -45,4 +45,16 @@
         	<version>21.0.1</version>
     	</dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
